@@ -44,13 +44,11 @@ public class SummarizeContext extends BotCommand<MessageEmbed, MessageContextInt
         );
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public CommandResponse<MessageEmbed> runCommand(long userId, @NonNull MessageContextInteractionEvent event) {
         EmbedBuilder workingEmbed;
         EmbedBuilder serverCheckEmbed;
         EmbedBuilder userCheckEmbed;
-        CommandResponse<MessageEmbed> rateLimitResponse;
         MessageEmbed[] embedsArray;
         long guildId;
 
@@ -63,14 +61,8 @@ public class SummarizeContext extends BotCommand<MessageEmbed, MessageContextInt
         }
 
         if(embedsArray != null) {
-            return new CommandResponse<>(isOnlyEphemeral(), true, embedsArray);
+            return new CommandResponse<>(isOnlyEphemeral(), true, null, embedsArray);
         }
-
-        // Check rate limit
-        rateLimitResponse = (CommandResponse<MessageEmbed>) checkAndHandleRateLimitedUser(userId);
-
-        if(rateLimitResponse != null)
-            return rateLimitResponse;
 
         // Check if user/guild is restricted
         guildId = event.getGuild() == null ? 0 : event.getGuild().getIdLong();
@@ -112,7 +104,7 @@ public class SummarizeContext extends BotCommand<MessageEmbed, MessageContextInt
                 eb.setDescription(NOTHING_FOUND);
                 eb.setColor(0xff0000);
             } else {
-                Message.Attachment attachment = attachments.get(0);
+                Message.Attachment attachment = attachments.getFirst();
 
                 if(SUPPORTED_FILE_EXTENSIONS.stream().anyMatch(attachment.getFileName()::endsWith)) {
                     try {
